<resources>
    <string name="application_name">IRCTC Booking Reminder</string>
    <string name="app_add_activity">Add Reminder</string>
    <string name="dateSeparator">/</string>
    <string name="timeSeparator">:</string>
    <string name="booking_open_desc">Booking opens on %1$s</string>
    <string name="journeyDateDesc">Journey on %1$s</string>
    <string name="empty_message">Oops! No Data</string>
    <string name="empty_ticket_description">Error occurred! Description is empty</string>
    <string name="from_station">From</string>
    <string name="to_station">To</string>
    <string name="alarm_radio_item">Alarm</string>
    <string name="add_to_calendar_item">Add to Calendar</string>
    <string name="add_to_calendar_item_value">Calendar</string>
    <string name="alarm_button">Select Time</string>
    <string name="add_to_google_calendar_button">Add to Calendar</string>
    <string name="select_alarm_type_text">Select Reminder Type</string>
    <string name="journeyDate">Journey Date</string>
    <string name="time">Time</string>
    <string name="selectedDateFormat">%1$d / %2$d / %3$d %4$s</string>
    <string name="selectedTimeFormat">%1$d : %2$d</string>
    <string name="selectedDatePastError">Selected Date is in past</string>
    <string name="bookingDatePastError">Booking Date is in past</string>
    <string name="selectedTimePastError">Select TIME to remind</string>
    <string name="selectJourneyDate">Select JOURNEY Date</string>
    <string name="action_add">Add</string>
    <string name="action_info">Information</string>
    <string name="ticket_detail">Ticket Description</string>
    <string name="date_of_journey">Select Journey Date</string>
    <string name="toast_google_calender_info">Click Save to Add to Google Calendar</string>
    <string name="toast_select_journey_date">Select Journey Date</string>
    <string name="toast_success_message">Reminder Added</string>
    <string name="toast_enter_description">required</string>
    <string name="toast_enter_from_station">required</string>
    <string name="toast_enter_to_station">required</string>
    <string name="channelNameHigh">High</string>
</resources>