<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/ticket_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ticket_detail"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/from_station"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/from_station"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticket_description" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/to_station"
        app:layout_constraintStart_toEndOf="@+id/from_station"
        app:layout_constraintTop_toTopOf="@+id/from_station"
        app:srcCompat="@drawable/icon_right" />

    <EditText
        android:id="@+id/to_station"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/to_station"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/from_station" />

    <!--<TextView-->
        <!--android:id="@+id/date_of_journey"-->
        <!--android:layout_width="151dp"-->
        <!--android:layout_height="46dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:ems="10"-->
        <!--android:gravity="center"-->
        <!--android:inputType="date"-->
        <!--android:text="@string/date_of_journey"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@android:color/background_dark"-->
        <!--android:textSize="16sp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/from_station" />-->

    <Button
        android:id="@+id/date_picker"
        style="?android:attr/spinnerStyle"
        android:layout_width="210dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        android:text="Journey Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/from_station" />

    <!--<TextView-->
        <!--android:id="@+id/selected_date"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:text="Selected Date"-->
        <!--app:layout_constraintStart_toEndOf="@+id/date_picker"-->
        <!--app:layout_constraintTop_toTopOf="@+id/date_picker" />-->

    <!--<TextView-->
        <!--android:id="@+id/selected_date_value"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="24dp"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:text="&#45;&#45;.&#45;&#45;.&#45;&#45;&#45;&#45;"-->
        <!--app:layout_constraintStart_toEndOf="@+id/date_picker"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/selected_date" />-->

    <!--<Switch-->
        <!--android:id="@+id/alarm_switch"-->
        <!--android:layout_width="195dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="320dp"-->
        <!--android:switchMinWidth="20dp"-->
        <!--android:switchPadding="75dp"-->
        <!--android:text="Add Reminder"-->
        <!--android:textAlignment="textStart"-->
        <!--android:textSize="16sp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/date_of_journey"-->
        <!--tools:checked="true" />-->

    <TextView
        android:id="@+id/booking_open_text"
        android:layout_width="231dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Ticket Opens On (d/m/yy)"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminder_action" />

    <TextView
        android:id="@+id/booking_date"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="--"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_open_text" />

    <TextView
        android:id="@+id/booking_month"
        android:layout_width="92dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="--"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/booking_date"
        app:layout_constraintTop_toBottomOf="@+id/booking_open_text" />

    <TextView
        android:id="@+id/booking_year"
        android:layout_width="106dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="----"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/booking_month"
        app:layout_constraintTop_toBottomOf="@+id/booking_open_text" />


    <TextView
        android:id="@+id/select_alarm_type_text"
        android:layout_width="155dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:text="@string/select_alarm_type_text"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker" />


    <View
        android:id="@+id/divider"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_alarm_type_text" />


    <RadioGroup
        android:id="@+id/alarm_type"
        android:layout_width="376dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_alarm_type_text">

        <RadioButton
            android:id="@+id/alarm_radio_button"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/alarm_radio_item" />

        <RadioButton
            android:id="@+id/add_to_calendar_radio_button"
            android:layout_width="243dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:text="@string/add_to_calendar_item" />

    </RadioGroup>

    <Button
        android:id="@+id/reminder_action"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="Select Time"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_type" />

    <TextView
        android:id="@+id/selected_time_text"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="40dp"
        android:text="Selected Time"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/reminder_action"
        app:layout_constraintTop_toTopOf="@+id/reminder_action" />

    <TextView
        android:id="@+id/selected_time"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:text="--.--"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/selected_time_text"
        app:layout_constraintTop_toBottomOf="@+id/selected_time_text" />

</android.support.constraint.ConstraintLayout>